#
# NetLabel Tools Tests
#
# Author: Paul Moore <paul@paul-moore.com>
#

#
# This program is free software: you can redistribute it and/or modify
# it under the terms of version 2 of the GNU General Public License as
# published by the Free Software Foundation.
#
# This program is distributed in the hope that it will be useful,
# but WITHOUT ANY WARRANTY; without even the implied warranty of
# MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
# GNU General Public License for more details.
#
# You should have received a copy of the GNU General Public License
# along with this program.  If not, see <http://www.gnu.org/licenses/>.
#

TESTS = regression

EXTRA_DIST_TESTS = \
	01-mgmt-version.tests \
	02-mgmt-protocols.tests \
	03-cipso_local.tests \
	04-cipso_pass.tests \
	05-cipso_trans.tests \
	06-map_domain.tests \
	07-map_addrselect.tests \
	08-unlbl_default.tests

EXTRA_DIST_TESTSCRIPTS = regression

EXTRA_DIST = \
	${EXTRA_DIST_TESTS} \
	${EXTRA_DIST_TESTSCRIPTS}
